[project]
name = "primes-times-table-lab"
version = "0.1.0"
description = "Python logic lab for multiplication tables, prime checks, and a simple sieve."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alberto Mateus P. da Gama" }]

[tool.pytest.ini_options]
pythonpath = ["."]
